discussion/kv_engine/126008/126008_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38802: Call to get_privilege_context_revision from front-end thread

Currently ActiveStream is calling get_privilege_context_revision
from background threads which can race with changes to the revision.

Moving to frontend thread which gives the same effect with some subtle
differences - e.g. a snapshot marker will be seen by the client before
the stream ends.

Change-Id: I22730f4ff25c21c37a0cee233f56bc8f0d0b02f4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-17 14:23:09.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 14:35:17.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27569/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\active_stream.cc(2017): error C2678: binary "!=": no operator found which takes a left-hand operand of type "bool" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27569/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1746/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:2017:49: error: invalid operands to binary expression ("bool" and "cb::engine_errc") [clang-diagnostic-error]
    if (filter.checkPrivileges(cookie, *engine) != cb::engine_errc::success) {
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/platform/sized_buffer.h:312:6: note: candidate template ignored: could not match "sized_buffer<type-parameter-0-0>" against "bool"
bool operator!=(sized_buffer<CharT> lhs, sized_buffer<CharT> rhs) {
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/memory_tracking_allocator.h:134:6: note: candidate template ignored: could not match "MemoryTrackingAllocator<type-parameter-0-0>" against "bool"
bool operator!=(MemoryTrackingAllocator<T> const& a,
     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1746/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:2017:49:
error: invalid operands to binary expression ("bool" and "cb::engine_errc") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1746/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23573/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:2017:49:
error: invalid operands to binary expression ("bool" and "cb::engine_errc")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3159/ : FAILURE

Compile error at [2020-04-17T14:33:04.829Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2017:49:
error: no match for ?operator!=? (operand types are ?bool? and ?cb::engine_errc?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3159/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2219/ : FAILURE

Compile error at [2020-04-17T14:24:50.022Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2017:49:
error: invalid operands to binary expression ("bool" and "cb::engine_errc")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2219/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3175/ : FAILURE

Compile error at [2020-04-17T14:33:19.124Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2017:49:
error: no match for ?operator!=? (operand types are ?bool? and ?cb::engine_errc?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3175/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3235/ : FAILURE

Compile error at [2020-04-17T14:34:11.988Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2017:49:
error: no match for ?operator!=? (operand types are ?bool? and ?cb::engine_errc?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3235/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11027/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/265/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
